Cadastros de disciplinas e matérias atualizados, com armazenamento em banco de dados.

--- a/TestsGenerator/TestsGenerator.csproj
+++ b/TestsGenerator/TestsGenerator.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TestsGenerator.Components\TestsGenerator.Components.csproj" />
     <ProjectReference Include="..\TestsGenerator.Domain\TestsGenerator.Domain.csproj" />
+    <ProjectReference Include="..\TestsGenerator.Infra.Database\TestsGenerator.Infra.Database.csproj" />
     <ProjectReference Include="..\TestsGenerator.Infra\TestsGenerator.Infra.csproj" />
   </ItemGroup>
 
